--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -15,7 +15,7 @@ border-radius: 3px;
 white-space: pre-wrap;">
     <code>
     # On Linux
-    <span style="color: #30BA78">curl -sfL https://alefesta.github.io/fuse-beta.github.io/in/installer.ps1 | sh -</span>
+    <span style="color: #30BA78">curl -sfL https://fuseml.github.io/in/installer.ps1 | sh -</span>
     # Install fuseml in your K8s cluster
     <span style="color: #30BA78">fuseml install</span>
     # Clone our examples folders
