--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -17,11 +17,11 @@ white-space: pre-wrap;">
     # On Linux
     <span style="color: #30BA78">curl -sfL https://fuseml.github.io/in/installer.ps1 | sh -</span>
     # Install fuseml in your K8s cluster
-    <span style="color: #30BA78">fuseml install</span>
+    <span style="color: #30BA78">fuseml-installer install</span>
     # Clone our examples folders
-    <span style="color: #30BA78">git clone https://github.com/fuseml/fuseml.git</span>
-    # Let's deploy a full end-to-end example
-    <span style="color: #30BA78">fuseml push  mlflow-model examples/mlflow-model</span>
+    <span style="color: #30BA78">git clone https://github.com:fuseml/examples.git</span>
+    # Use our step-by-step guide
+    <span style="color: #30BA78">https://github.com/fuseml/fuseml-core#example"</span>
     # Done!
     </code>
 </pre>
