--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,14 +3,14 @@
 <main>
     <div class="block introduction">
         <div class="column left">
-            <img src="images/portrait.jpg" style="
+            <img src="images/installer.gif" style="
             box-sizing: border-box;
             border: 10px solid ;
             margin: 2em 3em;
-            width: 100%;
+            width: 90%;
             height: auto;
-            max-width: 500px;
-            max-height: 300px;" />
+            max-width: 1024px;
+            max-height: 768px;" />
         </div>
         <div class="column right">
             {{- with .Param "greeting" -}}
