--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <main>
     <div class="block introduction">
         <div class="column left">
-            <img src="images/installer.gif" style="
+            <img src="images/fuseml-mlops-anim-fade.gif" style="
             box-sizing: border-box;
             border: 10px solid ;
             margin: 2em 3em;
