--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,8 @@
             height: auto;
             max-width: 1024px;
             max-height: 768px;" />
+            <a href="https://cloud.google.com/solutions/machine-learning/mlops-continuous-delivery-and-automation-pipelines-in-machine-learning#top_of_page">
+           Figure adopted from “MLOps: Continuous delivery and automation pipelines in machine learning”</a>
         </div>
         <div class="column right">
             {{- with .Param "greeting" -}}
