--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
             max-width: 1024px;
             max-height: 768px;" />
             <a href="https://cloud.google.com/solutions/machine-learning/mlops-continuous-delivery-and-automation-pipelines-in-machine-learning#top_of_page">
-           Figure adopted from “MLOps: Continuous delivery and automation pipelines in machine learning”</a>
+           Adopted from “MLOps: Continuous delivery and automation pipelines in machine learning”</a>
         </div>
         <div class="column right">
             {{- with .Param "greeting" -}}
